redactable/tests/ui/sensitive_not_sensitive_refcell_rejected.stderr
error[E0599]: the type `Direct` may contain interior mutability and a reference may not be safely transferable across a catch_unwind boundary
  --> tests/ui/sensitive_not_sensitive_refcell_rejected.rs:23:20
   |
 8 | struct Direct {
   | ------------- method `redacted_output` not found for this struct because it doesn't satisfy `Direct: RedactedOutputExt` or `Direct: RefUnwindSafe`
...
23 |     let _ = direct.redacted_output().to_redacted_output();
   |                    ^^^^^^^^^^^^^^^ `Direct` may contain interior mutability and a reference may not be safely transferable across a catch_unwind boundary
   |
   = note: the following trait bounds were not satisfied:
           `Direct: RefUnwindSafe`
           which is required by `Direct: RedactedOutputExt`
note: the trait `RefUnwindSafe` must be implemented
  --> $RUST/core/src/panic/unwind_safe.rs
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `redacted_output`, perhaps you need to implement it:
           candidate #1: `RedactedOutputExt`

error[E0599]: the type `Generic<RefCell<String>>` may contain interior mutability and a reference may not be safely transferable across a catch_unwind boundary
  --> tests/ui/sensitive_not_sensitive_refcell_rejected.rs:28:21
   |
14 | struct Generic<T> {
   | ----------------- method `redacted_output` not found for this struct because it doesn't satisfy `Generic<RefCell<String>>: RedactedOutputExt` or `Generic<RefCell<String>>: RefUnwindSafe`
...
28 |     let _ = generic.redacted_output().to_redacted_output();
   |                     ^^^^^^^^^^^^^^^ `Generic<RefCell<String>>` may contain interior mutability and a reference may not be safely transferable across a catch_unwind boundary
   |
   = note: the following trait bounds were not satisfied:
           `Generic<RefCell<String>>: RefUnwindSafe`
           which is required by `Generic<RefCell<String>>: RedactedOutputExt`
note: the trait `RefUnwindSafe` must be implemented
  --> $RUST/core/src/panic/unwind_safe.rs
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `redacted_output`, perhaps you need to implement it:
           candidate #1: `RedactedOutputExt`
